crates/nargo_cli/tests/compile_tests_data/fail/tail-typeck.nr
fn f() -> u8 { return g(); }

fn g() -> u32 { return 0; }

fn main() { let y = f(); }
